presentation de produit

--- a/front-end/connection/index.html
+++ b/front-end/connection/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>connextion</title>
     <link rel="stylesheet" href="../inscription/styl.css">
+    <script src="login.js" defer></script>
     <style>
         #lien{
             /* background-color: red; */
@@ -13,12 +14,12 @@
         }
 
         #lien a{
-            color: rgb(255, 255, 255);
+            color: rgb(0, 17, 255);
             font-size: .9rem;
             transition: .2s;
         }
         #lien a:hover{
-            color: rgb(17, 255, 0);
+            color: rgb(0, 0, 0);
         }
         .container{
             min-height: 350px;
