--- a/front-end/index.html
+++ b/front-end/index.html
@@ -32,7 +32,18 @@
             <div class="btn"><img src="icon/icons8-loupe-50.png" alt=""></div>
         </div>
         
-        <div class="user">N</div>
+        <div class="user" id="userN">N</div>
+        <div id="userinfo">
+                <p id="salutation">Salut, <span id="slttn">ELVIS</span></p>
+                <div class="info">
+                    <p>Email: <span id="emailUtilusateur">eeeeeee@gmai.com</span></p>
+                    <p>Nom: <span id="nomlUtilusateur">Nacanabo</span></p>
+                    <p>Prenom: <span id="prenomutilusateur">Elvis</span></p>
+                    <p>Tel: <span id="tellUtilusateur">64593395</span></p>
+                    <a href="">Modifier</a>
+                </div>
+                <a href="">Se déconnecter</a>
+        </div>
     </nav>
     <!-- contenaire centrale  -->
     <div class="container">
@@ -40,15 +51,15 @@
             <div class="containere">
                 <h2 class="observer1">Votre boutique en ligne pour des produits de qualité <br> à des prix compétitifs.</h2>
                 <div class="connection observer1">
-                    <a href="../front/connection/index.html" >  <div class="seconnecter">Se connecter</div></a>
-                    <a href="../front/inscription/inscription.html"><div class="sinscrire">S'inscrir</div></a>
+                    <a href="../front-end/connection/index.html" >  <div class="seconnecter">Se connecter</div></a>
+                    <a href="../front-end/inscription/inscription.html"><div class="sinscrire">S'inscrir</div></a>
                 </div>
                 <!-- <p class="pttexte observer1">votre satisfaction notre priorité</p> -->
             </div>
         </div>
         <!-- les produit recommender -->
         <div class="recommander observer1">
-            <h2>Recommander</h2>
+            <h2 class="titles">Recommander ></h2>
             <div class="produits">
                 <div class="item">
                     <div class="img"></div>
@@ -156,6 +167,80 @@
                 </div>
             </div>
         </div>
+        <!-- categorie disponible -->
+        <div id="categorie-dispo">
+            <h2 class="titles">Categories ></h2>
+            <div class="contenu">
+                <div class="item">
+                    <div class="img"></div>
+                    <h2>iphone</h2>
+                </div>
+                <div class="item">
+                    <div class="img"></div>
+                    <h2>iphone</h2>
+                </div>
+                <div class="item">
+                    <div class="img"></div>
+                    <h2>iphone</h2>
+                </div>
+                <div class="item">
+                    <div class="img"></div>
+                    <h2>iphone</h2>
+                </div>
+                <div class="item">
+                    <div class="img"></div>
+                    <h2>iphone</h2>
+                </div>
+                <div class="item">
+                    <div class="img"></div>
+                    <h2>iphone</h2>
+                </div>
+                <div class="item">
+                    <div class="img"></div>
+                    <h2>iphone</h2>
+                </div>
+                <div class="item">
+                    <div class="img"></div>
+                    <h2>iphone</h2>
+                </div>
+                <div class="item">
+                    <div class="img"></div>
+                    <h2>iphone</h2>
+                </div>
+                <div class="item">
+                    <div class="img"></div>
+                    <h2>iphone</h2>
+                </div>
+                <div class="item">
+                    <div class="img"></div>
+                    <h2>iphone</h2>
+                </div>
+                <div class="item">
+                    <div class="img"></div>
+                    <h2>iphone</h2>
+                </div>
+                <div class="item">
+                    <div class="img"></div>
+                    <h2>iphone</h2>
+                </div>
+                <div class="item">
+                    <div class="img"></div>
+                    <h2>iphone</h2>
+                </div>
+                <div class="item">
+                    <div class="img"></div>
+                    <h2>iphone</h2>
+                </div>
+                <div class="item">
+                    <div class="img"></div>
+                    <h2>iphone</h2>
+                </div>
+            </div>
+        </div>
+        <!-- presentation de produit sur la page d'acceuil -->
+        <div id="presentation-produit">
+
+        </div>
         <!-- petite presentation de Esychop -->
         <div class="aboute"> 
             <div class="item observer2"> 
@@ -185,7 +270,7 @@
         <!-- formulaire des Avis client -->
         <div class="avis">
             <div class="form observer1">
-                <h3>Laissez un avis</h3>
+                <h3 class="titles">Laissez un avis</h3>
                 <form action="">
                     <div class="nom">
                         <label for="">NOM:</label>
@@ -204,7 +289,7 @@
             </div>
         </div>
         <!-- affichage des Avis client -->
-        <h2 id="titreAvis">Retour clients</h2>
+        <h2 id="titreAvis" class="titles">Retour clients</h2>
         <div id="affichageAvis" class="observer1">
                 <div class="left"></div>
                 <div class="rigth"></div>
