fin de la page produit

--- a/front-end/index.html
+++ b/front-end/index.html
@@ -22,7 +22,7 @@
         <p id="logo">EsyShop</p>
         <ul>
             <li><a href="">Home</a></li>
-            <li><a href="">Produit</a></li>
+            <li><a href="/front-end/produit/produit.html">Produit</a></li>
             <li id="panier"><a href="">Panier</a><div id="notification">1</div></li>
             <li><a href="">Suportclient</a></li>
             <li><a href="">Legal</a></li>
@@ -239,7 +239,189 @@
         </div>
         <!-- presentation de produit sur la page d'acceuil -->
         <div id="presentation-produit">
-
+            <h2 class="titles">Tout ></h2>
+            <div class="produit-container">
+                <div class="produit observer3">
+                    <div class="img"></div>
+                    <div class="description"><p>une television smarte pour , pour une experiance visuel incomparable sjygshdfjsguidhfshuidfhuishf sygshfuhgshdgiyf</p></div>
+                    <div class="prix">$1800</div>
+                    <div class="panier"> <div class="lik">28 liks <img src="icon/icons8-coeurs-24.png" alt=""></div> <div class="btn"></div></div>
+                </div>
+                <div class="produit observer3 decalage">
+                    <div class="img"></div>
+                    <div class="description"><p>une television smarte pour , pour une experiance visuel incomparable sjygshdfjsguidhfshuidfhuishf sygshfuhgshdgiyf</p></div>
+                    <div class="prix">$1800</div>
+                    <div class="panier"> <div class="lik">28 liks <img src="icon/icons8-coeurs-24.png" alt=""></div> <div class="btn"></div></div>
+                </div>
+                <div class="produit observer3">
+                    <div class="img"></div>
+                    <div class="description"><p>une television smarte pour , pour une experiance visuel incomparable sjygshdfjsguidhfshuidfhuishf sygshfuhgshdgiyf</p></div>
+                    <div class="prix">$1800</div>
+                    <div class="panier"> <div class="lik">28 liks <img src="icon/icons8-coeurs-24.png" alt=""></div> <div class="btn"></div></div>
+                </div>
+                <div class="produit observer3 decalage">
+                    <div class="img"></div>
+                    <div class="description"><p>une television smarte pour , pour une experiance visuel incomparable sjygshdfjsguidhfshuidfhuishf sygshfuhgshdgiyf</p></div>
+                    <div class="prix">$1800</div>
+                    <div class="panier"> <div class="lik">28 liks <img src="icon/icons8-coeurs-24.png" alt=""></div> <div class="btn"></div></div>
+                </div>
+                <div class="produit observer3">
+                    <div class="img"></div>
+                    <div class="description"><p>une television smarte pour , pour une experiance visuel incomparable sjygshdfjsguidhfshuidfhuishf sygshfuhgshdgiyf</p></div>
+                    <div class="prix">$1800</div>
+                    <div class="panier"> <div class="lik">28 liks <img src="icon/icons8-coeurs-24.png" alt=""></div> <div class="btn"></div></div>
+                </div>
+                <div class="produit observer3 decalage">
+                    <div class="img"></div>
+                    <div class="description"><p>une television smarte pour , pour une experiance visuel incomparable sjygshdfjsguidhfshuidfhuishf sygshfuhgshdgiyf</p></div>
+                    <div class="prix">$1800</div>
+                    <div class="panier"> <div class="lik">28 liks <img src="icon/icons8-coeurs-24.png" alt=""></div> <div class="btn"></div></div>
+                </div>
+                <div class="produit observer3">
+                    <div class="img"></div>
+                    <div class="description"><p>une television smarte pour , pour une experiance visuel incomparable sjygshdfjsguidhfshuidfhuishf sygshfuhgshdgiyf</p></div>
+                    <div class="prix">$1800</div>
+                    <div class="panier"> <div class="lik">28 liks <img src="icon/icons8-coeurs-24.png" alt=""></div> <div class="btn"></div></div>
+                </div>
+                <div class="produit observer3 decalage">
+                    <div class="img"></div>
+                    <div class="description"><p>une television smarte pour , pour une experiance visuel incomparable sjygshdfjsguidhfshuidfhuishf sygshfuhgshdgiyf</p></div>
+                    <div class="prix">$1800</div>
+                    <div class="panier"> <div class="lik">28 liks <img src="icon/icons8-coeurs-24.png" alt=""></div> <div class="btn"></div></div>
+                </div>
+                <div class="produit observer3">
+                    <div class="img"></div>
+                    <div class="description"><p>une television smarte pour , pour une experiance visuel incomparable sjygshdfjsguidhfshuidfhuishf sygshfuhgshdgiyf</p></div>
+                    <div class="prix">$1800</div>
+                    <div class="panier"> <div class="lik">28 liks <img src="icon/icons8-coeurs-24.png" alt=""></div> <div class="btn"></div></div>
+                </div>
+                <div class="produit observer3 decalage">
+                    <div class="img"></div>
+                    <div class="description"><p>une television smarte pour , pour une experiance visuel incomparable sjygshdfjsguidhfshuidfhuishf sygshfuhgshdgiyf</p></div>
+                    <div class="prix">$1800</div>
+                    <div class="panier"> <div class="lik">28 liks <img src="icon/icons8-coeurs-24.png" alt=""></div> <div class="btn"></div></div>
+                </div>
+                <div class="produit observer3">
+                    <div class="img"></div>
+                    <div class="description"><p>une television smarte pour , pour une experiance visuel incomparable sjygshdfjsguidhfshuidfhuishf sygshfuhgshdgiyf</p></div>
+                    <div class="prix">$1800</div>
+                    <div class="panier"> <div class="lik">28 liks <img src="icon/icons8-coeurs-24.png" alt=""></div> <div class="btn"></div></div>
+                </div>
+                <div class="produit observer3 decalage">
+                    <div class="img"></div>
+                    <div class="description"><p>une television smarte pour , pour une experiance visuel incomparable sjygshdfjsguidhfshuidfhuishf sygshfuhgshdgiyf</p></div>
+                    <div class="prix">$1800</div>
+                    <div class="panier"> <div class="lik">28 liks <img src="icon/icons8-coeurs-24.png" alt=""></div> <div class="btn"></div></div>
+                </div>
+                <div class="produit observer3">
+                    <div class="img"></div>
+                    <div class="description"><p>une television smarte pour , pour une experiance visuel incomparable sjygshdfjsguidhfshuidfhuishf sygshfuhgshdgiyf</p></div>
+                    <div class="prix">$1800</div>
+                    <div class="panier"> <div class="lik">28 liks <img src="icon/icons8-coeurs-24.png" alt=""></div> <div class="btn"></div></div>
+                </div>
+                <div class="produit observer3 decalage">
+                    <div class="img"></div>
+                    <div class="description"><p>une television smarte pour , pour une experiance visuel incomparable sjygshdfjsguidhfshuidfhuishf sygshfuhgshdgiyf</p></div>
+                    <div class="prix">$1800</div>
+                    <div class="panier"> <div class="lik">28 liks <img src="icon/icons8-coeurs-24.png" alt=""></div> <div class="btn"></div></div>
+                </div>
+                <div class="produit observer3">
+                    <div class="img"></div>
+                    <div class="description"><p>une television smarte pour , pour une experiance visuel incomparable sjygshdfjsguidhfshuidfhuishf sygshfuhgshdgiyf</p></div>
+                    <div class="prix">$1800</div>
+                    <div class="panier"> <div class="lik">28 liks <img src="icon/icons8-coeurs-24.png" alt=""></div> <div class="btn"></div></div>
+                </div>
+                <div class="produit observer3 decalage">
+                    <div class="img"></div>
+                    <div class="description"><p>une television smarte pour , pour une experiance visuel incomparable sjygshdfjsguidhfshuidfhuishf sygshfuhgshdgiyf</p></div>
+                    <div class="prix">$1800</div>
+                    <div class="panier"> <div class="lik">28 liks <img src="icon/icons8-coeurs-24.png" alt=""></div> <div class="btn"></div></div>
+                </div>
+                <div class="produit observer3">
+                    <div class="img"></div>
+                    <div class="description"><p>une television smarte pour , pour une experiance visuel incomparable sjygshdfjsguidhfshuidfhuishf sygshfuhgshdgiyf</p></div>
+                    <div class="prix">$1800</div>
+                    <div class="panier"> <div class="lik">28 liks <img src="icon/icons8-coeurs-24.png" alt=""></div> <div class="btn"></div></div>
+                </div>
+                <div class="produit observer3 decalage">
+                    <div class="img"></div>
+                    <div class="description"><p>une television smarte pour , pour une experiance visuel incomparable sjygshdfjsguidhfshuidfhuishf sygshfuhgshdgiyf</p></div>
+                    <div class="prix">$1800</div>
+                    <div class="panier"> <div class="lik">28 liks <img src="icon/icons8-coeurs-24.png" alt=""></div> <div class="btn"></div></div>
+                </div>
+                <div class="produit observer3">
+                    <div class="img"></div>
+                    <div class="description"><p>une television smarte pour , pour une experiance visuel incomparable sjygshdfjsguidhfshuidfhuishf sygshfuhgshdgiyf</p></div>
+                    <div class="prix">$1800</div>
+                    <div class="panier"> <div class="lik">28 liks <img src="icon/icons8-coeurs-24.png" alt=""></div> <div class="btn"></div></div>
+                </div>
+                <div class="produit observer3 decalage">
+                    <div class="img"></div>
+                    <div class="description"><p>une television smarte pour , pour une experiance visuel incomparable sjygshdfjsguidhfshuidfhuishf sygshfuhgshdgiyf</p></div>
+                    <div class="prix">$1800</div>
+                    <div class="panier"> <div class="lik">28 liks <img src="icon/icons8-coeurs-24.png" alt=""></div> <div class="btn"></div></div>
+                </div>
+                <div class="produit observer3">
+                    <div class="img"></div>
+                    <div class="description"><p>une television smarte pour , pour une experiance visuel incomparable sjygshdfjsguidhfshuidfhuishf sygshfuhgshdgiyf</p></div>
+                    <div class="prix">$1800</div>
+                    <div class="panier"> <div class="lik">28 liks <img src="icon/icons8-coeurs-24.png" alt=""></div> <div class="btn"></div></div>
+                </div>
+                <div class="produit observer3 decalage">
+                    <div class="img"></div>
+                    <div class="description"><p>une television smarte pour , pour une experiance visuel incomparable sjygshdfjsguidhfshuidfhuishf sygshfuhgshdgiyf</p></div>
+                    <div class="prix">$1800</div>
+                    <div class="panier"> <div class="lik">28 liks <img src="icon/icons8-coeurs-24.png" alt=""></div> <div class="btn"></div></div>
+                </div>
+                <div class="produit observer3">
+                    <div class="img"></div>
+                    <div class="description"><p>une television smarte pour , pour une experiance visuel incomparable sjygshdfjsguidhfshuidfhuishf sygshfuhgshdgiyf</p></div>
+                    <div class="prix">$1800</div>
+                    <div class="panier"> <div class="lik">28 liks <img src="icon/icons8-coeurs-24.png" alt=""></div> <div class="btn"></div></div>
+                </div>
+                <div class="produit observer3 decalage">
+                    <div class="img"></div>
+                    <div class="description"><p>une television smarte pour , pour une experiance visuel incomparable sjygshdfjsguidhfshuidfhuishf sygshfuhgshdgiyf</p></div>
+                    <div class="prix">$1800</div>
+                    <div class="panier"> <div class="lik">28 liks <img src="icon/icons8-coeurs-24.png" alt=""></div> <div class="btn"></div></div>
+                </div>
+                <div class="produit observer3">
+                    <div class="img"></div>
+                    <div class="description"><p>une television smarte pour , pour une experiance visuel incomparable sjygshdfjsguidhfshuidfhuishf sygshfuhgshdgiyf</p></div>
+                    <div class="prix">$1800</div>
+                    <div class="panier"> <div class="lik">28 liks <img src="icon/icons8-coeurs-24.png" alt=""></div> <div class="btn"></div></div>
+                </div>
+                <div class="produit observer3 decalage">
+                    <div class="img"></div>
+                    <div class="description"><p>une television smarte pour , pour une experiance visuel incomparable sjygshdfjsguidhfshuidfhuishf sygshfuhgshdgiyf</p></div>
+                    <div class="prix">$1800</div>
+                    <div class="panier"> <div class="lik">28 liks <img src="icon/icons8-coeurs-24.png" alt=""></div> <div class="btn"></div></div>
+                </div>
+                <div class="produit observer3">
+                    <div class="img"></div>
+                    <div class="description"><p>une television smarte pour , pour une experiance visuel incomparable sjygshdfjsguidhfshuidfhuishf sygshfuhgshdgiyf</p></div>
+                    <div class="prix">$1800</div>
+                    <div class="panier"> <div class="lik">28 liks <img src="icon/icons8-coeurs-24.png" alt=""></div> <div class="btn"></div></div>
+                </div>
+                <div class="produit observer3 decalage">
+                    <div class="img"></div>
+                    <div class="description"><p>une television smarte pour , pour une experiance visuel incomparable sjygshdfjsguidhfshuidfhuishf sygshfuhgshdgiyf</p></div>
+                    <div class="prix">$1800</div>
+                    <div class="panier"> <div class="lik">28 liks <img src="icon/icons8-coeurs-24.png" alt=""></div> <div class="btn"></div></div>
+                </div>
+                <div class="produit observer3">
+                    <div class="img"></div>
+                    <div class="description"><p>une television smarte pour , pour une experiance visuel incomparable sjygshdfjsguidhfshuidfhuishf sygshfuhgshdgiyf</p></div>
+                    <div class="prix">$1800</div>
+                    <div class="panier"> <div class="lik">28 liks <img src="icon/icons8-coeurs-24.png" alt=""></div> <div class="btn"></div></div>
+                </div>
+                <div class="produit observer3 decalage">
+                    <div class="img"></div>
+                    <div class="description"><p>une television smarte pour , pour une experiance visuel incomparable sjygshdfjsguidhfshuidfhuishf sygshfuhgshdgiyf</p></div>
+                    <div class="prix">$1800</div>
+                    <div class="panier"> <div class="lik">28 liks <img src="icon/icons8-coeurs-24.png" alt=""></div> <div class="btn"></div></div>
+                </div>
+            </div>
         </div>
         <!-- petite presentation de Esychop -->
         <div class="aboute"> 
@@ -289,7 +471,7 @@
             </div>
         </div>
         <!-- affichage des Avis client -->
-        <h2 id="titreAvis" class="titles">Retour clients</h2>
+        <h2 id="titreAvis" class="titles observer1">Retour clients</h2>
         <div id="affichageAvis" class="observer1">
                 <div class="left"></div>
                 <div class="rigth"></div>
