une sauvegar pour me rassure

--- a/front-end/produit-individuel/produit1.html
+++ b/front-end/produit-individuel/produit1.html
@@ -6,6 +6,13 @@
     <title>Produit</title>
     <link rel="stylesheet" href="../style.css">
     <script src="../scrypt.js" defer></script>
+    <link rel="stylesheet" href="produit1-stile.css">
+    <!-- font -->
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Edu+AU+VIC+WA+NT+Hand:wght@400..700&display=swap" rel="stylesheet">
+    <!-- integration swiper par CDN -->
 </head>
 <body>
     <!-- navigation -->
@@ -35,17 +42,18 @@
                 </div>
                 <a href="">Se déconnecter</a>
         </div>
+    </nav>  
+    <!-- menue -->
+    <div id="menu">
 
-
-
-
-
-
-
-
-
-
-
+    </div>
+    <!-- contenu -->
+    <div id="container--principal">
+        <div class="left">
+            <h3>NOM DU PRODUIT</h3>
+        </div>
+        <div class="rigth"></div>
+    </div>
     <!-- menu du bas -->
     <div id="bootommenu">
         <div><img src="../icon/icons8-accueil-50.png" alt="">Home</div>
@@ -54,6 +62,5 @@
         <div><img src="../icon/icons8-service-client-50.png" alt="">Suportclient</div>
         <div><img src="../icon/icons8-loi-50.png" alt="">legal</div>
     </div>
-    </nav>
 </body>
 </html>
