fin de la page produit individuel

--- a/front-end/index.html
+++ b/front-end/index.html
@@ -241,12 +241,14 @@
         <div id="presentation-produit">
             <h2 class="titles">Tout ></h2>
             <div class="produit-container">
-                <div class="produit observer3">
-                    <div class="img"></div>
-                    <div class="description"><p>une television smarte pour , pour une experiance visuel incomparable sjygshdfjsguidhfshuidfhuishf sygshfuhgshdgiyf</p></div>
-                    <div class="prix">$1800</div>
-                    <div class="panier"> <div class="lik">28 liks <img src="icon/icons8-coeurs-24.png" alt=""></div> <div class="btn"></div></div>
-                </div>
+                <a href="../front-end/produit-individuel/produit1.html">
+                    <div class="produit observer3">
+                        <div class="img"></div>
+                        <div class="description"><p>une television smarte pour , pour une experiance visuel incomparable sjygshdfjsguidhfshuidfhuishf sygshfuhgshdgiyf</p></div>
+                        <div class="prix">$1800</div>
+                        <div class="panier"> <div class="lik">28 liks <img src="icon/icons8-coeurs-24.png" alt=""></div> <div class="btn"></div></div>
+                    </div>
+                </a>
                 <div class="produit observer3 decalage">
                     <div class="img"></div>
                     <div class="description"><p>une television smarte pour , pour une experiance visuel incomparable sjygshdfjsguidhfshuidfhuishf sygshfuhgshdgiyf</p></div>
